tests/negative/typecheck/decl.orng
// decl.orng:6:8: error: expected a value of type `Int`, got a value of type `()`
//     let x = 4
//       ^
// 
fn main() -> Int {
    let x = 4
}